# offline

./: .gitignore  .gitmodules  AGENTS.md  CNAME  Makefile  README.md  package-lock.json  package.json  playwright.config.js
.github/workflows/: pages.yml
app/: app-shell.html  gallery.html  guide-dialog.html  i18n.js  index.ymd  macros.ymd  runtime.test.js  segmented-control.html  shell.html  side-drawer.html  styles.less  theme.js  theme.test.js  tokens.css
engine/: Cargo.toml
engine/chess/: Cargo.toml
engine/chess/src/: game.rs  lib.rs
engine/games-core/: Cargo.toml
engine/games-core/src/: lib.rs
engine/junqi/: Cargo.toml
engine/junqi/src/: game.rs  lib.rs
engine/reversi/: Cargo.toml
engine/reversi/src/: game.rs  lib.rs
engine/sudoku/: Cargo.toml
engine/sudoku/src/: lib.rs
engine/wuziqi/: Cargo.toml
engine/wuziqi/src/: game.rs  lib.rs
engine/xiangqi/: Cargo.toml
engine/xiangqi/src/: game.rs  lib.rs
games/: Cargo.toml  catalog.json  wasm_abi.rs
games/chess/: Cargo.toml  api.js  chess.html  contract.test.js  page.ymd  worker.js
games/junqi/: Cargo.toml  api.js  contract.test.js  junqi.html  page.ymd  worker.js
games/reversi/: Cargo.toml  api.js  contract.test.js  page.ymd  reversi.html  worker.js
games/sudoku/: Cargo.toml  api.js  contract.test.js  page.ymd  sudoku.html
games/wuziqi/: Cargo.toml  api.js  (+4 more)
pages/: chess.ymd  index.ymd  junqi.ymd  offline.ymd  reversi.ymd  sudoku.ymd  wuziqi.ymd  xiangqi.ymd
public/: manifest.webmanifest
scripts/: build-sw.mjs  generate-icons.mjs  generate-sw.mjs  serve.mjs  sw.template.js
(+52 files in other folders)
