[workspace]
resolver = "2"
members = [
    "games-core",
    "chess",
    "junqi",
    "reversi",
    "sudoku",
    "wuziqi",
    "xiangqi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ylxdzsw"]

[workspace.dependencies]
games-core = { path = "games-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
